# Linkedin-Agent-Temp

./: filestructure.txt  linkedin_database.db  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
agent/: llm.py
agent/orchestrator/: orchestrator.py  tool_registry.py
agent/prompts/: analyze_profile_prompts.py  content_prompts.py  research_prompts.py
agent/tools/: content_tool.py  profile_tool.py  publisher_tool.py  research_tool.py  scheduler_tool.py  timer_tool.py  utils.py
backend/: config.py  main.py  requirements.txt
backend/api/: linkedin_api.py  research_api.py
backend/api/routes/profile_utils_routes/: profile_utility_routes.py  util_functions.py
backend/api/v1/: content_routes.py  orchestrator_routes.py  profile_routes.py  schedule_routes.py
backend/db/: models.py
backend/services/: orchestrator_services.py
backend/utils/: logger.py
frontend/static/: style.css
frontend/templates/: index.html
web/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
web/src/: App.jsx
web/src/lib/: api.js
web/src/pages/: Healthpage.jsx  LandingPage.jsx  OrchestratorPage.jsx
